# Compiler-PHP

./: .gitignore  README.md
LLVM/: CMakeLists.txt
LLVM/example/: dot-call-fact.dot
LLVM/src/: CMakeLists.txt
LLVM/src/graph/: Graph.cpp  Graph.hpp
lexer/: a.out  build.sh
lexer/cmake/: CompileOptions.cmake
lexer/examples/: example  example.php  example1  exp.ll  exp.php  exp2.php  exp3.php
lexer/src/: CMakeLists.txt
lexer/src/grammar/: CMakeLists.txt  PHPLexer.g4  Php.g4  PhpLexer.g4  PhpParser.g4
lexer/src/libphp/: CMakeLists.txt
lexer/src/libphp/libphp/: dump_symtable.cpp  dump_symtable.hpp  dump_tokens.cpp  dump_tokens.hpp  parser.cpp  parser.hpp
lexer/src/libphp/libphp/ast/: Ast.cpp  Ast.hpp  CodeGen.cpp  CodeGen.hpp  SymTableVisitor.cpp  SymTableVisitor.hpp  Symbol.hpp  Visitor.hpp  XmlSerializer.cpp  XmlSerializer.hpp
lexer/src/libphp/libphp/ast/detail/: Builder.cpp  Builder.hpp
lexer/src/libphp/test/: lexer.cpp  parser.cpp  symtable.cpp
lexer/src/php-parser/: CMakeLists.txt
lexer/src/php-parser/php-parser/: main.cpp
llvm/lab-1/: build.sh
llvm/lab-1/cmake/: CompileOptions.cmake
llvm/lab-1/example/: dot-def-use-rand-o3.dot  dot-def-use-rand.dot  fact.c  fact.ll  rand.c  rand.ll
